# config-api

./: .gitignore  README.md  pyproject.toml
src/configapi/: drls.py  srls.py
src/configapi/_internals/: exceptions.py  testingtools.py  typingtools.py
tests/configapi/: test_drls.py  test_srls.py
